@@ -21,6 +21,7 @@ public:
   CStdString m_strPath;
   CStdString m_strVideo;
   CStdString m_strParameters;
+  CStdString m_strCustomGame;
 };
 
 #endif // !defined(AFX_SHORTCUT_H__641CCF68_6D2A_426E_9204_C0E4BEF12D00__INCLUDED_)
